--- a/templates/start/base.html
+++ b/templates/start/base.html
@@ -45,38 +45,63 @@
 
                         {% endblock %}
                 </div>
-
-
-        <a name="about"></a>
-        <div class="text-center text-white">
-            <h1>What is the Unchaind Alliance?</h1>
-
-            <p>We support a blockchain-free technology stack.</p>
-            <p>We believe in a decentralized web that is based on protocols and interoperability.</p>
-            <p>We know from practical experience that there are very few technology problems
-            for which a blockchain is the best answer. </p>
-            <p>We acknowledge the current climate crisis as a fact, and value reduction of atmospheric carbon
-            over the fetishization of tax avoidance.</p>
-            <p>We have witnessed the destruction of sanity that arises when social agendas are tightly-coupled to virtual currency.</p>
-            <p>We acknowledge that innovations in, and democratization of, contract law require a relationship with, 
-            and recourse to, an appropriate legal jurisdiction.</p>
-            <p>We have no appetite for further growth in the tulip market.</p>
-        </div>
-
-        <a name="join"></a>
-        <div class="text-center text-white">
-            <h1>How can I join the coin-free movement?</h1>
-
-            <p>Embed the logos of the Unchaind Alliance on your web applications, and 
-            include a link to https://unchaind.org. </p>
-
-            <img src="/static/unchaind-cert.png" width="480" height="144"/>
-            <img src="/static/unchaind-cert-2.png" width="480" height="160"/>
-
-        </div>
-
             </div>
         </header>
+
+        <a name="about"></a>
+        <section id="about">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-4 order-lg-1">
+                        <!-- <div class="p-5"><img class="img-fluid rounded-circle" src="/static/assets/img/01.jpg" alt="..."></div> -->
+                    </div>
+                    <div class="col-lg-8 order-lg-2">
+                        <div class="p-5">
+                            <h3 class="display-4">What is the Unchaind Alliance?</h3>
+                            <p class="lead">We support a blockchain-free technology stack.</p>
+                            <p>We believe in a decentralized web that is based on protocols and interoperability.</p>
+                            <p>We know from practical experience that there are very few technology problems
+                            for which a blockchain is the best answer. </p>
+                            <p class="lead">We acknowledge the current climate crisis as a fact, and value reduction of atmospheric carbon
+                            over the fetishization of tax avoidance.</p>
+                            <p>We have witnessed the destruction of sanity that arises when social agendas are tightly-coupled to virtual currency.</p>
+                            <p>We acknowledge that innovations in, and democratization of, contract law require a relationship with, 
+                            and recourse to, an appropriate legal jurisdiction.</p>
+                            <p class="lead">We have no appetite for further growth in the tulip market.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <a name="join"></a>
+        <section id="join">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-lg-2">
+                        <div class="p-5">
+                        
+
+                        <img src="/static/unchaind-cert.png" width="480" height="193"/><br/>
+                        <img src="/static/unchaind-cert-2.png" width="480" height="160"/><br/>
+                        <img src="/static/unchaind-cert-3.png" width="480" height="160"/><br/>
+                        <img src="/static/unchaind-small.png" width="114" height="114"/><br/>
+                        
+                        <!-- <img class="img-fluid rounded-circle" src="assets/img/02.jpg" alt="..."> -->
+                        </div>
+                    </div>
+                    <div class="col-lg-6 order-lg-1">
+                        <div class="p-5">
+                            <h3 class="display-4">How can I join the coin-free movement?</h3>
+                            <p>Embed the logos of the Unchaind Alliance on your web applications, and include a link to https://unchaind.org. </p>
+               </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <!-- Footer-->
         <footer class="py-5 bg-black">
             <div class="container px-5"><p class="m-0 text-center text-white small">
