--- a/templates/start/base.html
+++ b/templates/start/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Recentralized web presence for the decentralized age" />
+        <meta name="description" content="Unchaind Alliance: Public Commitment to a Blockchain-free Web Stack" />
         <meta name="author" content="" />
         <title>Unchaind.org</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
